k8s/firebase-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firebase-auth-emulator
spec:
  selector:
    matchLabels:
      app: firebase-auth-emulator
  template:
    metadata:
      labels:
        app: firebase-auth-emulator
    spec:
      containers:
        - name: firebase-auth
          image: voraciousdev/firebase-tools
          command: ["firebase", "emulators:start", "--only", "auth", "--project", "ehealth-local-project", "--host", "0.0.0.0"]
          ports:
            - containerPort: 9099
---
apiVersion: v1
kind: Service
metadata:
  name: firebase-auth # Internal DNS name your microservices will use
spec:
  selector:
    app: firebase-auth-emulator
  ports:
    - port: 9099
      targetPort: 9099
