k8s/patient-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-patient-service
spec:
  selector:
    matchLabels:
      app: k8s-patient-service
  template:
    metadata:
      labels:
        app: k8s-patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-patient-service
spec:
  type: NodePort
  selector:
    app: k8s-patient-service
  ports:
    - name: patient-service
      port: 80
      nodePort: 30000
      targetPort: 8080
