k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: "postgres:14"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
              name: init-script-vol
      volumes:
        - name: init-script-vol
          configMap:
            name: postgres-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
