k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-user-service
spec:
  selector:
    matchLabels:
      app: k8s-user-service
  template:
    metadata:
      labels:
        app: k8s-user-service
    spec:
      containers:
        - name: user-service
          image: user-service
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-user-service
spec:
  type: NodePort
  selector:
    app: k8s-user-service
  ports:
    - name: user-service
      port: 80
      nodePort: 30001
      targetPort: 8081
