k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: k8s-patient-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: k8s-user-service
                port:
                  number: 80
